fix spacing

--- a/src/components/MemberGrid.css
+++ b/src/components/MemberGrid.css
@@ -5,7 +5,7 @@
     margin-top: 5vw;
     margin-left: 15%;
     margin-right: 15%;
-    gap: 2%;
+    gap: 3.4%;
 }
 
 .member-card{
